Add public sandbox developer resources
